# commit-checks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  tox.ini
check_print/: __main__.py  main.py
check_variable_names/: __main__.py  main.py
